--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "scss-loader": "^0.0.1",
     "vue": "^2.6.10",
     "vue-loader": "^15.7.1",
+    "vue-resize": "^0.4.5",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.10",
     "vue-template-loader": "^1.0.0",
